@@ -3159,12 +3159,6 @@ FAQ
       Halcyon Software
       http://www.halcyonsoft.com
 
-    If you are willing to migrate your VBScript ASP to PHP, you might also
-    check out:
-
-      asp2php.com site
-      http://www.asp2php.com
-
   Support and Production
 
     How do I get things I want done?!
